<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="22dp"
        tools:context=".EditorActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/EditTextTheme"
                android:text="@string/book_title" />

            <EditText
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:hint="@string/book_title"
                android:inputType="textCapWords"
                android:textSize="16dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/EditTextTheme"
                android:text="@string/quantity" />

            <EditText
                android:id="@+id/quantity"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:hint="@string/quantity"
                android:inputType="number"
                android:textSize="16dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/EditTextTheme"
                android:text="@string/price" />

            <EditText
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:hint="@string/price"
                android:inputType="number"
                android:textSize="16dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/EditTextTheme"
                android:text="@string/author_name" />

            <EditText
                android:id="@+id/author_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:hint="@string/author_name"
                android:inputType="textCapWords"
                android:textSize="16dp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/EditTextTheme"
                android:text="@string/supplier_phone" />

            <EditText
                android:id="@+id/phone"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:hint="@string/supplier_phone"
                android:inputType="phone"
                android:textSize="16dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/EditTextTheme"
                android:text="@string/supplier" />

            <Spinner
                android:id="@+id/supplier_spinner"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:paddingRight="14dp"
                android:spinnerMode="dropdown" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>